<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Parkour Playground</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_pager_">Pager_Activity</string>
    <string name="title_activity_test_slide">testSlide</string>
    <string name="title_activity_my">Map</string>
    <string name="banner_ad_unit_id">ca-app-pub-4533601820925807/8950867975</string>
    <string name="banner_ad_unit_id_map">ca-app-pub-4533601820925807/3962265173</string>
    <string name="title_activity_activity_login">Login</string>
    <string name="title_activity_activity_register">Activity_register</string>
    <string name="title_activity_activity__pass_reset">Activity_PassReset</string>
    <string name="title_activity_activity__spot_info">Details</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="toolbar_title">Spot view</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="sign_up">Sign up here</string>
    <string name="signin_problem">Problems signing in?</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="img_title">Title</string>
    <string name="img_description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="img_upload">Upload</string>
    <string name="email">E-mail</string>
    <string name="txt_registerToPlayground">Register on ParkourPlaygorund</string>
    <string name="txt_resetPassword">Reset your password</string>
    <string name="toast_validEmail">You must enter a valid email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sure">Are you sure?</string>
    <string name="title_activity_activity__user_profile">Activity_UserProfile</string>
    <string name="title_activity_activity__profile">Activity_Profile</string>
    <string name="dismiss">Dismiss</string>
    <string name="done">Done</string>

</resources>
