<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/back"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/uplaoderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/txt_registerToPlayground"
            android:textColor="#50FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp" />


        <net.eray.ParkourPlayground.customView.RippleLoginForm
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/uplaoderText"
            android:background="#FFF"
            android:id="@+id/reg_form"
            android:padding="20dp"
            android:layout_margin="20dp"
            android:layout_centerHorizontal="true">

            <net.eray.ParkourPlayground.customView.RippleEditText
                android:id="@+id/username"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/username"
                android:textColor="#000000"
                android:textSize="15dp"
                android:inputType="textPersonName">
                </net.eray.ParkourPlayground.customView.RippleEditText>

            <net.eray.ParkourPlayground.customView.RippleEditText
                android:id="@+id/email"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_below="@+id/username"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textSize="15dp"
                android:singleLine="true">
                </net.eray.ParkourPlayground.customView.RippleEditText>

            <net.eray.ParkourPlayground.customView.RippleEditText
                android:id="@+id/pword"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textSize="15dp"
                android:layout_below="@+id/email">
                </net.eray.ParkourPlayground.customView.RippleEditText>

            </net.eray.ParkourPlayground.customView.RippleLoginForm>

        <net.eray.ParkourPlayground.customView.RippleButton
            android:id="@+id/register"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_below="@+id/reg_form"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="19dp"
            android:visibility="gone">
            </net.eray.ParkourPlayground.customView.RippleButton>

    </RelativeLayout>

</LinearLayout>